Added response functionality for Player

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,6 +42,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
+    ${reference.TetradServer2.jar}:\
     ${reference.tetrad.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -71,8 +72,10 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.tetrad=../Tetrad
+project.tetrad=../tetrad
+project.TetradServer2=../TetradServer2
 reference.tetrad.jar=${project.tetrad}/dist/tetrad.jar
+reference.TetradServer2.jar=${project.TetradServer2}/dist/TetradServer2.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
